@@ -1,3 +1,13 @@
+2023-03-12  KAWANO Toshihiko  <kawano@lanl.gov>
+
+	* source/decelibread.cpp (DeceLibScan): new function
+	* source/deceoperation.cpp (DeceOperationLIBREAD): updated
+	import all MTs in the given MF from a data file when mt = 0
+
+	* source/decechecktotal.cpp: new file
+	summation check: total = sum partial
+	new command checktotal
+
 2023-03-11  KAWANO Toshihiko  <kawano@lanl.gov>
 
 	* source/deceoperation.cpp (DeceOperation): updated
